--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is the first title</title>
-    <link rel="stylesheet" href="base.css">
+    <link href="base.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
