--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="reset.css" />
     <link href="./0-styles.css" rel="stylesheet" />
-    <link rel="images" href="/__MACOSX/images/">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Spinnaker&display=swap" rel="stylesheet">
-
     <title>Document</title>
   </head>
   <body>
     <header>
       <nav class="nav">
-        <img class="logo" src="/images/logo_headphones.png" alt="logo" />
-
+        <div class="z">
+          <img
+            class="logo"
+            src="/headphones/images/logo_headphones.png"
+            alt="logo"
+          />
+        </div>
         <ul>
           <li><a href="#">what we do</a></li>
           <li><a href="#">our results</a></li>
@@ -24,14 +24,51 @@
         </ul>
       </nav>
     </header>
-    <main class="page1">
+    <main>
+      <div class="page1">
         <section class="section1">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing <br></h1>
-            <p>elit. Neque iusto, eos cupiditate repellat</p>
-            <button class="btn">CALL TO ACTION</button>
+          <h1>Lorem ipsum dolor sit amet consectetur adipisicing</h1>
+          <p>elit. Neque iusto, eos cupiditate repellat</p>
+          <button class="btn">CALL TO ACTION</button>
         </section>
 
         <section class="section2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, sint maiores! Porro, deleniti ex <br>eos aliquid nemo accusamus. Hic beatae, cumque quisquam numquam vero architecto <br>perspiciatis aperiam voluptatibus repellat sed. Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Earum, placeat mollitia? Porro eum sit tempora tempore, <br>cupiditate, eius libero obcaecati quos similique et delectus fugiat voluptatibus <br>praesentium neque consequatur repudiandae.</p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, sint
+            maiores! Porro, deleniti ex <br />eos aliquid nemo accusamus. Hic
+            beatae, cumque quisquam numquam vero architecto <br />perspiciatis
+            aperiam voluptatibus repellat sed. Lorem ipsum dolor sit amet
+            consectetur <br />adipisicing elit. Earum, placeat mollitia? Porro
+            eum sit tempora tempore, <br />cupiditate, eius libero obcaecati
+            quos similique et delectus fugiat voluptatibus <br />praesentium
+            neque consequatur repudiandae.
+          </p>
         </section>
+      </div>
+
+      </section>
+      <section>
+        <div>
+          <img class="logo" src="/headphones/images/favicon.ico" alt="logo" />
+          <p>Lorem, ipsum dolor sit amet</p>
+          <p>consectetur adipisicing elit.</p>
+        </div>
+        <div>
+          <img class="logo" src="/headphones/images/favicon.ico" alt="logo" />
+          <p>Lorem, ipsum dolor sit amet</p>
+          <p>consectetur adipisicing elit.</p>
+        </div>
+        <div>
+          <img class="logo" src="/headphones/images/favicon.ico" alt="logo" />
+          <p>Lorem, ipsum dolor sit amet</p>
+          <p>consectetur adipisicing elit.</p>
+        </div>
+        <div>
+          <img class="logo" src="/headphones/images/favicon.ico" alt="logo" />
+          <p>Lorem, ipsum dolor sit amet</p>
+          <p>consectetur adipisicing elit.</p>
+        </div>
+      </section>
     </main>
+  </body>
+</html>
